# KubeSec

./: README.md  kubesec.py
Privilege-Detection/: README.md  riskanalyzer.py
Privilege-Detection/configfetcher/: configfetcher.go  go.sum
dateset/curiefense-main/: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  RELEASES.md  SECURITY.md
dateset/curiefense-main/curiefense/curieproxy/rust/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.fuzz  Makefile
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense/: Cargo.toml  build.rs
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense-externalprocessing/: Cargo.toml
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense-externalprocessing/src/: ext_proc.rs  server.rs
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense-ffi/: Cargo.toml  README.md  curiefense_ffi.h
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense-ffi/src/: lib.rs
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense-lua/: Cargo.toml
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense-lua/src/: lib.rs  userdata.rs
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense-py/: Cargo.toml  README.md
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense-py/src/: lib.rs
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense-utils/: Cargo.toml
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense-utils/src/: main.rs
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense/assets/ipinfo/: continent.json
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense/benches/: body_parse.rs  check_acl.rs  logging.rs  requestfields.rs  security_policies.rs
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense/fuzz/: Cargo.toml  dict.txt
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense/fuzz/fuzz_targets/: fuzz_target_1.rs
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense/src/: acl.rs  analyze.rs  contentfilter.rs  flow.rs  geo.rs  grasshopper.rs  incremental.rs  ipinfo.rs  lib.rs  limit.rs  logs.rs  redis.rs  requestfields.rs  response.rs  securitypolicy.rs  servergroup.rs  simple_executor.rs  tagging.rs
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense/src/body/: graphql.rs  mod.rs
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense/src/config/: contentfilter.rs  custom.rs  flow.rs  globalfilter.rs  hostmap.rs  limit.rs  matchers.rs  mod.rs  raw.rs  virtualtags.rs
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense/src/interface/: aggregator.rs  block_reasons.rs  mod.rs  stats.rs  tagging.rs
dateset/curiefense-main/curiefense/curieproxy/rust/curiefense/src/utils/: decoders.rs  json.rs  mod.rs  templating.rs  url.rs
dateset/curiefense-main/curiefense/curieproxy/rust/luatests/: create_direct_tags.py  gotestwafimport.py  run.sh  test.lua
dateset/curiefense-main/curiefense/curieproxy/rust/luatests/config/json/: acl-profiles.json  actions.json  contentfilter-profiles.json  contentfilter-rules.json  flow-control.json  globalfilter-lists.json  limits.json  securitypolicy.json  virtual-tags.json
dateset/curiefense-main/curiefense/curieproxy/rust/luatests/flows/: byquery.json  deny.json  expired.json  multiip.json  on_header.json  simple.json  steps.json
dateset/curiefense-main/curiefense/curieproxy/rust/luatests/gowaf/: blob.json  run.py
dateset/curiefense-main/curiefense/curieproxy/rust/luatests/ipinfo/: test-ipinfo.lua
dateset/curiefense-main/curiefense/curieproxy/rust/luatests/ipinfo/config/json/: contentfilter-profiles.json  securitypolicy.json
dateset/curiefense-main/curiefense/curieproxy/rust/luatests/ipinfo/raw_requests/: test-asn.json  test-idf.json  test-mobile.json  test-tor.json  test-vpn.json
dateset/curiefense-main/curiefense/curieproxy/rust/luatests/masking/: all.json  body.json  cookies.json  header.json  path.json  plugins.json
dateset/curiefense-main/curiefense/curieproxy/rust/luatests/ratelimit/: test-blocking-skipped.json  test-blocking.json  test-country-include.json  test-exclude-block.json  test-exclude-pass.json  test-global.json  test-header-absent.json  test-header-present.json  test-include-block.json  test-include-pass.json  test-limithost.json  test-limiturl.json  test-method.json  test-multi.json  test-multiple-ip.json  test-multiple-limits.json  test-multiple-thresholds.json  test-non-blocking.json  test-same-country.json  test-same-network.json  test-threshold-priority.json
dateset/curiefense-main/curiefense/curieproxy/rust/luatests/raw_requests/: actions.json  allsections.json  body_decoding.json  branch-tag.json  collision.json  content_response.json  direct-tags.json  gf-challenge.json  header_accumulation.json  human.json  inactive-acl.json  limit-tags.json  limitchallenge.json  limitskip.json  multiplematches.json  plugins-jwt-acl.json  plugins-jwt-cf.json  request_headers.json  tagbytag.json  test-contentfilter.json  test-global-filter-trigger.json  test-individual-category.json  test-multidomain.json  test-priority.json  test-region.json  test-tag-actions.json  test-tag-security-policy.json  test-waf-ignores.json  test-waf-mask.json
dateset/curiefense-main/curiefense/traffic-metrics-exporter/: setup.cfg
dateset/curiefense-main/curiefense/traffic-metrics-exporter/src/: traffic_metrics_exporter.py
dateset/curiefense-main/curiefense/traffic-metrics-exporter/src/utils/: prometheus_counters_dict.py
dateset/lifecycle-toolkit-main/: mkdocs.yml
dateset/pixie-main/src/carnot/planner/distributed/: BUILD.bazel
dateset/skooner-master/: kubernetes-skooner-serviceaccount.yaml
dateset/v6d-main/: setup_kedro.py
privilegedetection/: bak.py  configlocator.py  extract_.py  parse.py  rbac_class.py  rbac_project.py  riskanalyzer.py
privilegedetection/configfetcher/: getRole.go  go.mod
src/: README.md
src/Privilege-Detection/: configlocator.py  extract_.py  parse.py  rbac_project.py
tpacollection/: craw.py
tpcdetection/coordinator/: READEME.md  analis.py  create_project.py  delete_project.py  detect.py  get_boms.py  (+4 more)
(+1450 files in other folders)
