[metadata]
name = traffic-metrics-exporter
summary = exposing traffic metrics to prometheus
version = 0.0.1
description_file =
    README.md
author = Reblaze Developers
author_email = yoavk@reblaze.com
home_page = https://github.com/reblaze/main-repo/tree/main/services/curieproxy/containers/traffic-metrics-exporter
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[global]
setup_hooks =
  pbr.hooks.setup_hook


[options]
include_package_data = True
packages = find_namespace:
setup_requres =
    cython==0.29.28
install_requires =
    python-dateutil==2.8.2
    prometheus-client==0.14.1
    requests==2.27.1
    pymongo==4.2.0
    jsonpath-ng==1.5.3


[options.package_data]
* = *.*

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1