[package]
name = "curiefense-externalprocessing"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "cf-externalprocessing"
path = "src/server.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
prost-types = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
curiefense = { path = "../curiefense" }
structopt = "0.3"
log = "0.4"
syslog = "6.0"
simplelog = "0.12"
lazy_static = "*"
elasticsearch = "7.14.0-alpha.1"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }