[package]
name = "curiefense-lua"
version = "0.1.0"
authors = ["simon <simon@banquise.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
curiefense = { path = "../curiefense" }

anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.7", features = ["luajit", "module"] }
maxminddb = "0.13"
regex = "1"
rand = "0.8.3"
cidr = "0.1.1"
md5 = "0.7"
urlencoding = "1.1"